# puzzle

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package.json  puzzle_bg.wasm
.github/workflows/: deploy.yml
data/latin/: 0.txt  1.txt  2.txt  3.txt  4.txt
js/: puzzle.d.ts  puzzle.js  puzzle_bg.wasm.d.ts
note/taocp/4A/: langford.md
src/: array.rs  latin.rs  lib.rs  main.rs
www/: index.html  index.js  package-lock.json
