[package]
name = "puzzle"
version = "0.1.0"
authors = ["masaki.ono <aaikmnoos@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
itertools = "0.10.0"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
